--- a/PHP/cms/style.css
+++ b/PHP/cms/style.css
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   color: #333;
-  background-color: #00a0b0;
+  background-color: #F63C1A;
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   line-height: 1.5em;
 }
@@ -47,7 +47,7 @@ h1 {
 }
  
 h2, h2 a {
-  color: #edc951;
+  color: #00a0b0;
 }
  
 h2 a {
